--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <div class="total">
       <div class="total">Your total is: $<span id="total">0</span></div>
     </div>
+ <!-- The manifest -->
+ <link rel="manifest" href="manifest.webmanifest" />    
 
     <div class="form">
       <input type="text" id="t-name" placeholder="Name of transaction" />
